<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Colorbackgruondlogin"
    tools:context=".MainActivity">

    <EditText
        android:background="@drawable/shape"
        android:id="@+id/TextPersonName"
        android:layout_width="@dimen/editextlayoutwidth"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="@dimen/layout_marginTop_usuariotextbox"
        android:ems="10"
        android:inputType="textPersonName"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/Buttonlayout_width"
        android:layout_height="@dimen/Buttonlayout_height"
        android:layout_marginTop="@dimen/Buttonlayout_marginTop"
        android:background="@drawable/shape"
        android:backgroundTint="@color/Colorbackgruondbuttonhint"
        android:text="@string/btnlogin"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPersonName" />

    <EditText
        android:background="@drawable/shape"
        android:id="@+id/TextPassword"
        android:layout_width="@dimen/editextlayoutwidth"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="@dimen/layout_marginTop_passwordtextbox"
        android:ems="10"
        android:inputType="textPassword"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPersonName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/imagelayout_width"
        android:layout_height="@dimen/imagelayout_height"
        android:layout_marginStart="@dimen/imagelayout_marginStart"
        android:layout_marginTop="@dimen/imagelayout_marginTop"
        android:layout_marginEnd="@dimen/imagelayout_marginEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imdb_logo" />

    <TextView
        android:id="@+id/textUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textusuriolayout_marginTop"
        android:text="@string/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/textlayout_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textpasswordlayout_marginTop"
        android:text="@string/Contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/textpasswordlayout_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPersonName" />

    <TextView
        android:id="@+id/textSugerenciaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textpasswordlayout_marginTop"
        android:text="@string/ingresacon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/sugerencialoginlayout_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/imageviewlogolayout_width"
        android:layout_height="@dimen/imageviewlogolayout_height"
        android:layout_marginStart="@dimen/imageviewlogolayout_marginStart"
        android:layout_marginTop="@dimen/imageviewlogolayout_marginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/logoapple" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/imageviewlogolayout_width"
        android:layout_height="@dimen/imageviewlogolayout_height"
        android:layout_marginTop="@dimen/imageviewlogolayout_marginTop"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="@dimen/imageviewlogolayout_constraintHorizontal_bias"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/logoface" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/imageviewlogolayout_width"
        android:layout_height="@dimen/imageviewlogolayout_height"
        android:layout_marginTop="@dimen/imageviewlogolayout_marginTop"
        android:layout_marginEnd="@dimen/imageviewlogolayout_marginEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/logogoogle" />

    <TextView
        android:id="@+id/textNotienescuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textviewlayout_marginStart"
        android:layout_marginTop="@dimen/textviewlayout_marginTop"
        android:text="@string/notienescuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textpasswordlayout_marginTop"
        android:layout_marginEnd="@dimen/textviewlayout_marginEnd"
        android:text="@string/registrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/Textcontiuarinvitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textviewguesslayout_marginTop"
        android:text="@string/continuarcomoinvitado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/textviewguesslayout_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewolvido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textolvidocontraseñalayout_marginTop"
        android:text="@string/olvidocontraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/textolvidocontraseñalayout_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
